# haskell-gymnastics

./: .gitignore  LICENSE  README.md  haskell-gymnastics.cabal  haskell-gymnastics.cabal.save0  log.txt
Applicative/: applicative.md
Cabal/: cabal.md
Char String ByteString Text/: Char.hs  FourPicsOneWord.hs  bytestring.md
Concurrency/: ForkIO.hs
Exception/: ExceptionHandling.md  ReadConfig.hs  TestException.hs
Http/: HttpBench.hs
IO/: BetterPredicate.hs  ControledVisit.hs  InputAndOutput.hs  ReadAndWrite.hs
Monad/: Monad.md
Monad/MonadPlus/: MonadPlusUsage.hs
Monad/Reader/: ReaderPrac.hs
Monad/ST/: ST.hs  ST.md
Monad/State/: SupplierM.hs
Monad/Writer/: Writer.md
QuickCheck/: Arbitrary.hs  QuickCheck.md
Random/: SystemRandom.hs
Regex/: Glob.hs  GlobRegex.hs
Transformer/: MonadTransformerPrac.hs
Type/: algebraic data type.md
XML/: UpdateXML.hs  XMLLens.hs
data structure/: List.md
parsing/: Parse.hs  ParsecPrac.hs
src/: InputAndOutput.hs  MonoidPrac.hs  ReaderPrac.hs  Recursion.hs  Spaghetii.hs  StateMonad.hs  TestException.hs  WriterMonadPrac.hs  haskell-gymnastics.hs
src/Applicative/: applicative.md
src/Array/: Barcode.hs
src/ByteString/: WordsFromLetters.hs
src/Collection/: General.hs
src/ExceptionHandling/: ExceptionHandling.md
src/FunctionComposition/: FunctionComposition.md
src/IO/: BetterPredicate.hs  ControledVisit.hs  FoldDir.hs  ReadAndWrite.hs  RecursiveContents.hs
src/Monad/: List Comprehension.md  Monad.md
src/MonadPlus/: monadplus.md
src/Monoid/: Monoid.md
src/Random/: Random.md  SystemRandom.hs
src/Reader/: ReaderPrac.hs
src/Regex/: Glob.hs
src/ST/: FibST.hs  ST.hs  Shuffle.hs  SumST.hs
src/State/: StackMonadTransformer.hs  State moand.md  StateMonad.hs  Supplier.hs
src/Transformer/: MonadTransformerPrac.hs  Transformer.md
src/Writer/: CollectLogs.hs  FindFiles.hs
src/XML/: SpringBatchXMLTrans.hs  UpdateXML.hs  XMLConduitPrac.hs
src/Zipper/: TreeZipper.hs
src/haskell-gymnastics/: Internal.hs
src/parsing/: PNM.hs  Parse.hs
test/: RecursionSpec.hs  haskell-gymnasticsSpec.hs
test/IO/: ReadAndWriteSpec.hs
test/XML/: UpdateXMLSpec.hs
toolbox/Cabal/: cabal.md
